# Backend-bluePi-Assignment

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  postman_collection.json  wait-for-db.sh
.secret/: secret_key.txt
migrations/2024-12-23-074906_add_users_tables/: up.sql
migrations/2024-12-24-173527_create_token_auth_table/: down.sql  up.sql
migrations/2024-12-25-124229_create_product_type_table/: down.sql  up.sql
migrations/2024-12-25-124757_create_product_table/: down.sql  up.sql
migrations/2024-12-25-125411_create_uploader_table/: down.sql  up.sql
migrations/2024-12-25-201123_create_system_param_table/: down.sql  up.sql
migrations/2024-12-26-103750_create_order_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/common/: config.rs  encryptor.rs  jwt.rs  mod.rs  request.rs
src/di/: database.rs  server.rs
src/entity/: users.rs
src/repository/: auth_token.rs  mod.rs  product.rs  product_type.rs  sale_order.rs  sale_order_line.rs  system_parameter.rs  uploader.rs  users.rs
src/service/: migrator.rs  mod.rs
src/service/http/: mod.rs  router.rs  users.rs
src/service/http/auth/: access_token.rs  login.rs  me.rs  mod.rs  register.rs  user.rs
src/service/http/order/: cancel_order.rs  create_order.rs  get_order.rs  mod.rs  order.rs  pay_order.rs
src/service/http/product/: create_product.rs  get_product.rs  list_product.rs  mod.rs  product.rs  update_product.rs
src/service/http/product_type/: create.rs  create_product_type.rs  get_product_type.rs  list_product_type.rs  mod.rs  product_type.rs  (+1 more)
(+11 files in other folders)
